--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
       <div class="weight-box pound">
         <h3 class="subtitle">Pound</h3>
-        <span class="pound-value">1</span>
+        <span class="pound-value">&nbsp;</span>
       </div>
 
       <div class="weight-box gram">
         <h3 class="subtitle">Gram</h3>
-        <span class="gram-value">1</span>
+        <span class="gram-value">&nbsp;</span>
       </div>
 
       <div class="weight-box ounce">
         <h3 class="subtitle">Ounce</h3>
-        <span class="ounce-value">1</span>
+        <span class="ounce-value">&nbsp;</span>
       </div>
     </div>
     <script src="js/app.js"></script>
