add bmi calc function

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+
+  <section class="result">
+    <h1 class="title">Health Index </h1>
+    <hr />
+    <h3 class="subtitle health-info">Your Body Mass Index is: <span class=" bmi-result"></span></h3>
+    <h3 class="subtitle health-info">You are: <span class=" status-result"></span></h3>
+  </section>
+
+
   <main>
     <!-- weight converter -->
     <section class="weight">
